* some minor corrections and changes for consistency: (1) Last Changed By/Date populated by the application (2) text changes in various screens and navbar (3) added field validation (4) mandatory fields are denoted with red asterisks (5) modified create/update/delete alert message (6) Employee name is shown correctly in dropdown

--- a/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHours-detail.html
+++ b/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHours-detail.html
@@ -1,6 +1,6 @@
 
 <div>
-    <h2><span>EmployeeBillingHours</span> {{employeeBillingHours.id}}</h2>
+    <h2><span>Employee Billing Hours - </span>{{employeeBillingHours.employee.name}}</h2>
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
@@ -10,6 +10,14 @@
             </tr>
             </thead>
             <tbody>
+            <tr>
+                <td>
+                    <span>Employee</span>
+                </td>
+                <td>
+                    <a class="form-control-static" ui-sref="employee.detail({id:employeeBillingHours.employee.id})">{{employeeBillingHours.employee.name}}</a>
+                </td>
+            </tr>
             <tr>
                 <td>
                     <span>Week1</span>
@@ -80,14 +88,6 @@
                 </td>
                 <td>
                     <span class="form-control-static">{{employeeBillingHours.lastChangedBy}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>employee</span>
-                </td>
-                <td>
-                    <a class="form-control-static" ui-sref="employee.detail({id:employeeBillingHours.employee.id})">{{employeeBillingHours.employee.name}}</a>
                 </td>
             </tr>
             </tbody>
