--- a/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHours-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHours-dialog.html
@@ -3,42 +3,48 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myEmployeeBillingHoursLabel">Create or edit a EmployeeBillingHours</h4>
+        <h4 class="modal-title" id="myEmployeeBillingHoursLabel">Create or edit Employee Billing Hours</h4>
     </div>
 
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-        <div class="form-group">
+        <div class="form-group required">
+            <label class="control-label" for="field_employee">Employee</label>
+            <select class="form-control" id="field_employee" name="employee" ng-model="employeeBillingHours.employee" ng-options="employee as employee.name for employee in employees track by employee.id">
+                <option value="">---- Select Employee -----</option>
+            </select>
+        </div>
+        <div class="form-group required">
             <label class="control-label" for="field_week1">Week1</label>
             <input type="number" class="form-control" name="week1" id="field_week1"
                     ng-model="employeeBillingHours.week1"
                      />
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_week2">Week2</label>
             <input type="number" class="form-control" name="week2" id="field_week2"
                     ng-model="employeeBillingHours.week2"
                      />
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_week3">Week3</label>
             <input type="number" class="form-control" name="week3" id="field_week3"
                     ng-model="employeeBillingHours.week3"
                      />
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_week4">Week4</label>
             <input type="number" class="form-control" name="week4" id="field_week4"
                     ng-model="employeeBillingHours.week4"
                      />
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_week5">Week5</label>
             <input type="number" class="form-control" name="week5" id="field_week5"
                     ng-model="employeeBillingHours.week5"
                      />
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_createdDate">CreatedDate</label>
             <input id="field_createdDate" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="employeeBillingHours.createdDate" is-open="datePickerForCreatedDate.status.opened"
             />
@@ -46,20 +52,13 @@
                 <button type="button" class="btn btn-default" ng-click="datePickerForCreatedDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
             </span>
         </div>
-        <div class="form-group">
+        <div class="form-group required">
             <label class="control-label" for="field_forecastDate">ForecastDate</label>
             <input id="field_forecastDate" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="employeeBillingHours.forecastDate" is-open="datePickerForForecastDate.status.opened"
             />
             <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="datePickerForForecastDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
             </span>
-        </div>
-
-        <div class="form-group">
-            <label for="field_employee">Employee</label>
-            <select class="form-control" id="field_employee" name="employee" ng-model="employeeBillingHours.employee" ng-options="employee as employee.name for employee in employees track by employee.id">
-                <option value=""></option>
-            </select>
         </div>
     </div>
     <div class="modal-footer">
