--- a/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHourss.html
+++ b/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHourss.html
@@ -1,11 +1,11 @@
 <div>
-    <h2>EmployeeBillingHours</h2>
+    <h2>Employee Billing Hours</h2>
     <jh-alert></jh-alert>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
                 <button class="btn btn-primary" ui-sref="employeeBillingHours.new">
-                    <span class="glyphicon glyphicon-flash"></span> <span>Create a new EmployeeBillingHours</span>
+                    <span class="glyphicon glyphicon-flash"></span> <span>Create new Employee Billing Hours</span>
                 </button>
             </div>
             <div class="col-md-8">
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="query">
                     </div>
-                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a EmployeeBillingHours</span>
+                    <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search Employee Billing Hours</span>
                     </button>
                 </form>
             </div>
@@ -24,6 +24,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th><span>Employee</span></th>
                     <th><span>Week1</span></th>
                     <th><span>Week2</span></th>
                     <th><span>Week3</span></th>
@@ -31,12 +32,14 @@
                     <th><span>Week5</span></th>
                     <th><span>CreatedDate</span></th>
                     <th><span>ForecastDate</span></th>
-                    <th><span>employee</span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="employeeBillingHours in employeeBillingHourss track by employeeBillingHours.id">
+                    <td>
+                        <a ui-sref="employee.detail({id:employeeBillingHours.employee.id})">{{employeeBillingHours.employee.name}}</a>
+                    </td>
                     <td>{{employeeBillingHours.week1}}</td>
                     <td>{{employeeBillingHours.week2}}</td>
                     <td>{{employeeBillingHours.week3}}</td>
@@ -44,9 +47,6 @@
                     <td>{{employeeBillingHours.week5}}</td>
                         <td>{{employeeBillingHours.createdDate | date:'mediumDate'}}</td>
                         <td>{{employeeBillingHours.forecastDate | date:'mediumDate'}}</td>
-                    <td>
-                        <a ui-sref="employee.detail({id:employeeBillingHours.employee.id})">{{employeeBillingHours.employee.name}}</a>
-                    </td>
                     <td>
                         <button type="submit"
                                 ui-sref="employeeBillingHours.detail({id:employeeBillingHours.id})"
