--- a/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHourss.html
+++ b/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHourss.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <button class="btn btn-primary" ui-sref="employeeBillingHours.new">
+                <button class="btn btn-primary" ng-click="newForecastForComingMonths()">
                     <span class="glyphicon glyphicon-flash"></span> <span>Create new Employee Billing Hours</span>
                 </button>
             </div>
@@ -20,52 +20,39 @@
         </div>
     </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive" ng-show="newForecast">
         <table class="table table-striped">
             <thead>
-                <tr>
-                    <th><span>Employee</span></th>
-                    <th><span>Week1</span></th>
-                    <th><span>Week2</span></th>
-                    <th><span>Week3</span></th>
-                    <th><span>Week4</span></th>
-                    <th><span>Week5</span></th>
-                    <th><span>CreatedDate</span></th>
-                    <th><span>ForecastDate</span></th>
-                    <th></th>
-                </tr>
+            <tr>
+                <th><span>Month</span></th>
+                <th><span>Week1</span></th>
+                <th><span>Week2</span></th>
+                <th><span>Week3</span></th>
+                <th><span>Week4</span></th>
+                <th><span>Week5</span></th>
+                <th></th>
+                <th></th>
+            </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="employeeBillingHours in employeeBillingHourss track by employeeBillingHours.id">
-                    <td>
-                        <a ui-sref="employee.detail({id:employeeBillingHours.employee.id})">{{employeeBillingHours.employee.name}}</a>
-                    </td>
-                    <td>{{employeeBillingHours.week1}}</td>
-                    <td>{{employeeBillingHours.week2}}</td>
-                    <td>{{employeeBillingHours.week3}}</td>
-                    <td>{{employeeBillingHours.week4}}</td>
-                    <td>{{employeeBillingHours.week5}}</td>
-                        <td>{{employeeBillingHours.createdDate | date:'mediumDate'}}</td>
-                        <td>{{employeeBillingHours.forecastDate | date:'mediumDate'}}</td>
-                    <td>
-                        <button type="submit"
-                                ui-sref="employeeBillingHours.detail({id:employeeBillingHours.id})"
-                                class="btn btn-info btn-sm">
-                            <span class="glyphicon glyphicon-eye-open"></span>&nbsp;<span> View</span>
-                        </button>
-                        <button type="submit"
-                                ui-sref="employeeBillingHours.edit({id:employeeBillingHours.id})"
-                                class="btn btn-primary btn-sm">
-                            <span class="glyphicon glyphicon-pencil"></span>&nbsp;<span> Edit</span>
-                        </button>
-                        <button type="submit"
-                                ui-sref="employeeBillingHours.delete({id:employeeBillingHours.id})"
-                                class="btn btn-danger btn-sm">
-                            <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span> Delete</span>
-                        </button>
-                    </td>
-                </tr>
+            <tr ng-repeat="hours in forcastEmployeeBillingHours">
+                <td>{{hours.forecastDate | date:'MMMM'}}</td>
+                <td><input type="text" class="form-control" ng-model="hours.week1" id="hours.week1"></td>
+                <td><input type="text" class="form-control" ng-model="hours.week2" id="hours.week2"></td>
+                <td><input type="text" class="form-control" ng-model="hours.week3" id="hours.week3"></td>
+                <td><input type="text" class="form-control" ng-model="hours.week4" id="hours.week4"></td>
+                <td><input type="text" class="form-control" ng-model="hours.week5" id="hours.week5"></td>
+            </tr>
             </tbody>
         </table>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default" ng-click="clear()">
+                <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Cancel</span>
+            </button>
+            <button type="button" class="btn btn-primary">
+                <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Save</span>
+            </button>
+        </div>
     </div>
+
 </div>
