Employee Billing Hours Changes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -188,6 +188,13 @@
     <script src="scripts/app/entities/employeeHolidays/employeeHolidays-detail.controller.js"></script>
     <script src="scripts/components/entities/employeeHolidays/employeeHolidays.service.js"></script>
     <script src="scripts/components/entities/employeeHolidays/employeeHolidays.search.service.js"></script>
+    <script src="scripts/app/entities/employeeHours/employeeHours.js"></script>
+    <script src="scripts/app/entities/employeeHours/employeeHours.controller.js"></script>
+    <script src="scripts/app/entities/employeeHours/employeeHours-dialog.controller.js"></script>
+    <script src="scripts/app/entities/employeeHours/employeeHours-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/employeeHours/employeeHours-detail.controller.js"></script>
+    <script src="scripts/components/entities/employeeHours/employeeHours.service.js"></script>
+    <script src="scripts/components/entities/employeeHours/employeeHours.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
