--- a/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHourss.html
+++ b/src/main/webapp/scripts/app/entities/employeeBillingHours/employeeBillingHourss.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <button class="btn btn-primary" ng-click="newForecastForComingMonths()">
+                <button class="btn btn-primary" >
                     <span class="glyphicon glyphicon-flash"></span> <span>Create new Employee Billing Hours</span>
                 </button>
             </div>
