Employee Holidays Refactor

--- a/src/main/webapp/scripts/app/entities/employeeHours/employeeHours-detail.html
+++ b/src/main/webapp/scripts/app/entities/employeeHours/employeeHours-detail.html
@@ -12,42 +12,10 @@
             <tbody>
             <tr>
                 <td>
-                    <span>Week1</span>
+                    <span>Holidays</span>
                 </td>
                 <td>
-                    <span class="form-control-static">{{employeeHours.week1}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>Week2</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{employeeHours.week2}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>Week3</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{employeeHours.week3}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>Week4</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{employeeHours.week4}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>Week5</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{employeeHours.week5}}</span>
+                    <span class="form-control-static">{{employeeHours.holidays}}</span>
                 </td>
             </tr>
             <tr>
@@ -64,14 +32,6 @@
                 </td>
                 <td>
                     <span class="form-control-static">{{employeeHours.forecastDate | date:'mediumDate'}}</span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <span>Type</span>
-                </td>
-                <td>
-                    <span class="form-control-static">{{employeeHours.type}}</span>
                 </td>
             </tr>
             <tr>
