--- a/src/main/webapp/scripts/app/entities/employeeHours/employeeHours-dialog.html
+++ b/src/main/webapp/scripts/app/entities/employeeHours/employeeHours-dialog.html
@@ -14,33 +14,9 @@
                     ng-model="employeeHours.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_week1">Week1</label>
-            <input type="number" class="form-control" name="week1" id="field_week1"
-                    ng-model="employeeHours.week1"
-                     />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_week2">Week2</label>
-            <input type="number" class="form-control" name="week2" id="field_week2"
-                    ng-model="employeeHours.week2"
-                     />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_week3">Week3</label>
-            <input type="number" class="form-control" name="week3" id="field_week3"
-                    ng-model="employeeHours.week3"
-                     />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_week4">Week4</label>
-            <input type="number" class="form-control" name="week4" id="field_week4"
-                    ng-model="employeeHours.week4"
-                     />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_week5">Week5</label>
-            <input type="number" class="form-control" name="week5" id="field_week5"
-                    ng-model="employeeHours.week5"
+            <label class="control-label" for="field_holidays">Holidays</label>
+            <input type="text" class="form-control" name="holidays" id="field_holidays"
+                    ng-model="employeeHours.holidays"
                      />
         </div>
         <div class="form-group">
@@ -58,12 +34,6 @@
             <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="datePickerForForecastDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
             </span>
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_type">Type</label>
-            <input type="text" class="form-control" name="type" id="field_type"
-                    ng-model="employeeHours.type"
-                     />
         </div>
         <div class="form-group">
             <label class="control-label" for="field_lastChangedDate">LastChangedDate</label>
