--- a/src/main/webapp/scripts/app/entities/employeeHours/employeeHourss.html
+++ b/src/main/webapp/scripts/app/entities/employeeHours/employeeHourss.html
@@ -5,10 +5,10 @@
         <div class="row">
             <div class="col-md-4">
                 <button class="btn btn-primary" ng-click="newForecastForComingMonths()">
-                    <span class="glyphicon glyphicon-flash"></span> <span>Create a new Hours</span>
+                    <span class="glyphicon glyphicon-flash"></span> <span>Select the non-billable days</span>
                 </button>
             </div>
-            <div class="col-md-8">
+            <!-- <div class="col-md-8">
                 <form name="searchForm" class="form-inline">
                     <div class="form-group">
                         <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="query">
@@ -16,7 +16,7 @@
                     <button class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> <span>Search a EmployeeHours</span>
                     </button>
                 </form>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -24,7 +24,7 @@
         <table class="table table-striped">
             <thead>
             <tr>
-                <th><span>Month</span> </th>
+                <th><span>MONTH</span> </th>
                 <th ng-repeat="n in [].constructor(31) track by $index"><span>{{$index + 1}}</span> </th>
             </tr>
             </thead>
