--- a/src/main/webapp/scripts/app/entities/employeeHours/employeeHourss.html
+++ b/src/main/webapp/scripts/app/entities/employeeHours/employeeHourss.html
@@ -1,3 +1,4 @@
+<form name="employeeHoursForm" role="form" novalidate ng-submit="save()">
 <div>
     <h2>Employee Hours</h2>
     <jh-alert></jh-alert>
@@ -30,7 +31,7 @@
             </thead>
             <tr ng-repeat="(key, value) in forcastEmployeeHours">
                 <td><b>{{key}}</b></td>
-                <td ng-repeat="dateOfMonth in value"><input id="checkSlave" type="checkbox" ng-checked="dateOfMonth.selected" ng-disabled="dateOfMonth.holiday"></td>
+                <td ng-repeat="dateOfMonth in value"><input id="checkSlave" type="checkbox" name="selected" ng-model="dateOfMonth.selected" ng-checked="dateOfMonth.selected" ng-disabled="dateOfMonth.holiday"></td>
             </tr>
             </tbody>
         </table>
@@ -38,9 +39,10 @@
             <button type="button" class="btn btn-default" ng-click="clear()">
                 <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span>Cancel</span>
             </button>
-            <button type="button" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary">
                 <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Save</span>
             </button>
         </div>
     </div>
 </div>
+</form>
