--- a/src/main/webapp/scripts/app/entities/employeeHours/employeeHourss.html
+++ b/src/main/webapp/scripts/app/entities/employeeHours/employeeHourss.html
@@ -29,16 +29,22 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="(key, value) in newForecastEmployeeHoursMap">
+            <tr ng-repeat="(key, value) in newForecastEmployeeHours.employeeHoursForComingMonths">
                 <td><b>{{key | date : 'MMMM'}}</b></td>
-                <td ng-repeat="dateOfMonth in value"><input id="checkSlave" type="checkbox" name="selected" ng-model="dateOfMonth.selected" ng-checked="dateOfMonth.selected" ng-disabled="dateOfMonth.holiday"></td>
+                <td ng-repeat="dateOfMonth in value">
+                	<input id="checkSlave" type="checkbox" name="selected" ng-model="dateOfMonth.selected" ng-checked="dateOfMonth.selected" 
+                		ng-disabled="dateOfMonth.holiday || newForecastEmployeeHours.forecastFreezePeriod">
+                </td>
             </tr>
             </tbody>
         </table>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" ng-hide="newForecastEmployeeHours.forecastFreezePeriod">
                 <span class="glyphicon glyphicon-save"></span>&nbsp;<span>Save</span>
             </button>
+            <div id="forecastFreezePeriodMessage" ng-show="newForecastEmployeeHours.forecastFreezePeriod">
+            	FORECAST FREEZE PERIOD: Forecast can be neither created nor updated anymore in this month
+            </div>
         </div>
     </div>
 </form>
