* Added the 'Employee Hours Administration' screen

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -175,11 +175,14 @@
     <script src="scripts/components/entities/holidays/holidays.service.js"></script>
     <script src="scripts/components/entities/holidays/holidays.search.service.js"></script>
     <script src="scripts/app/entities/employeeHours/employeeHours.js"></script>
+    <script src="scripts/app/entities/employeeHours/employeeHoursAdmin.js"></script>
     <script src="scripts/app/entities/employeeHours/employeeHours.controller.js"></script>
+    <script src="scripts/app/entities/employeeHours/employeeHoursAdmin.controller.js"></script>
     <script src="scripts/app/entities/employeeHours/employeeHours-dialog.controller.js"></script>
     <script src="scripts/app/entities/employeeHours/employeeHours-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/employeeHours/employeeHours-detail.controller.js"></script>
     <script src="scripts/components/entities/employeeHours/employeeHours.service.js"></script>
+    <script src="scripts/components/entities/employeeHours/employeeHoursAdmin.service.js"></script>
     <script src="scripts/components/entities/employeeHours/employeeHours.search.service.js"></script>
     <!-- endbuild -->
 </body>
