Created business logic for writing the hours of all the employees for the coming months in excel workbook

--- a/src/main/webapp/scripts/app/entities/employeeHours/employeeHoursAdmin.html
+++ b/src/main/webapp/scripts/app/entities/employeeHours/employeeHoursAdmin.html
@@ -37,9 +37,8 @@
 	<!-- DOWNLOAD EMPLOYEE HOURS -->
 	<div class="table-responsive" ng-show="showDownloadEmployeeHoursDiv">
 		<h4>Download Employee Hours</h4>
-		Download the Employee Hours based on Employee/Month
-		<br/>
-	    TO BE ADDED
+		Downloads forecast Hours of all the Employees for the coming months
+		<br/><br/>
     </div>
 </form>
 
