--- a/src/main/webapp/scripts/app/entities/employeeHours/employeeHoursAdmin.html
+++ b/src/main/webapp/scripts/app/entities/employeeHours/employeeHoursAdmin.html
@@ -37,7 +37,8 @@
 	<!-- DOWNLOAD EMPLOYEE HOURS -->
 	<div class="table-responsive" ng-show="showDownloadEmployeeHoursDiv">
 		<h4>Download Employee Hours</h4>
-		Downloads forecast Hours of all the Employees for the coming months
+		Downloading forecast Hours of all the Employees for the coming months,
+        Location : C:/Users/Public/Downloads/Forecast.xls
 		<br/><br/>
     </div>
 </form>
