Code Refactoring done to show the forecast hours of all employees for admin user.

--- a/src/main/webapp/scripts/app/entities/employeeHours/employeeHoursAdmin.html
+++ b/src/main/webapp/scripts/app/entities/employeeHours/employeeHoursAdmin.html
@@ -26,10 +26,9 @@
 <form name="viewEmployeeHoursForm" role="form" novalidate ng-submit="viewEmployeeHours()">
 	<!-- VIEW EMPLOYEE HOURS -->
 	<div class="table-responsive" ng-show="showViewEmployeeHoursDiv">
-		<h4>View Employee Hours</h4>
-		View the Employee Hours based on Employee/Month
+    	<h4>View Employee Hours</h4>
+		View the Employee Hours based on Employee
 		<br/>
-	    TO BE ADDED
     </div>
 </form>
 
